src/frontend-proxy/envoy.tmpl.yaml
# Copyright The OpenTelemetry Authors
# SPDX-License-Identifier: Apache-2.0

static_resources:
  listeners:
    - address:
        socket_address:
          address: "${ENVOY_ADDR}"
          port_value: ${ENVOY_PORT}
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: frontend
                      domains:
                        - "*"
                      routes:
                        - match: { path: "/loadgen" }
                          redirect: { path_redirect: "/loadgen/" }
                        - match: { prefix: "/loadgen/" }
                          route: { cluster: loadgen, prefix_rewrite: "/" }
                        - match: { prefix: "/images/" }
                          route:
                            { cluster: image-provider, prefix_rewrite: "/" }
                        - match: { prefix: "/flagservice/" }
                          route:
                            {
                              cluster: flagservice,
                              prefix_rewrite: "/",
                              timeout: 0s,
                            }
                        - match: { prefix: "/feature" }
                          route:
                            cluster: flagd-ui
                            prefix_rewrite: "/"
                            upgrade_configs:
                              - upgrade_type: websocket
                        - match: { path: "/profiles" }
                          redirect: { path_redirect: "/profiles/" }
                        - match: { prefix: "/profiles/" }
                          route: { cluster: profiles }
                        - match: { path: "/chatbot" }
                          redirect: { path_redirect: "/chatbot/" }
                        - match: { prefix: "/chatbot/" }
                          route:
                            cluster: chatbot
                            prefix_rewrite: "/"
                            timeout: 0s
                            upgrade_configs:
                              - upgrade_type: websocket
                        - match: { prefix: "/" }  # Default/catch-all route - keep last since prefix:"/" matches everything
                          route: { cluster: frontend }
                http_filters:
                  - name: envoy.filters.http.fault
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault
                      max_active_faults: 100
                      delay:
                        header_delay: {}
                        percentage:
                          numerator: 100
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: frontend
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      dns_failure_refresh_rate: { base_interval: 10s, max_interval: 30s }
      typed_dns_resolver_config: &dns_resolver
        name: envoy.network.dns_resolver.getaddrinfo
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.network.dns_resolver.getaddrinfo.v3.GetAddrInfoDnsResolverConfig
      load_assignment:
        cluster_name: frontend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ${FRONTEND_HOST}
                      port_value: ${FRONTEND_PORT}
    - name: image-provider
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      dns_failure_refresh_rate: { base_interval: 10s, max_interval: 30s }
      typed_dns_resolver_config: *dns_resolver
      load_assignment:
        cluster_name: image-provider
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ${IMAGE_PROVIDER_HOST}
                      port_value: ${IMAGE_PROVIDER_PORT}
    - name: flagservice
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      dns_failure_refresh_rate: { base_interval: 10s, max_interval: 30s }
      typed_dns_resolver_config: *dns_resolver
      load_assignment:
        cluster_name: flagservice
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ${FLAGD_HOST}
                      port_value: ${FLAGD_PORT}
    - name: flagd-ui
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      dns_failure_refresh_rate: { base_interval: 10s, max_interval: 30s }
      typed_dns_resolver_config: *dns_resolver
      load_assignment:
        cluster_name: flagd-ui
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ${FLAGD_UI_HOST}
                      port_value: ${FLAGD_UI_PORT}
    - name: loadgen
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      dns_failure_refresh_rate: { base_interval: 10s, max_interval: 30s }
      typed_dns_resolver_config: *dns_resolver
      load_assignment:
        cluster_name: loadgen
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ${LOCUST_WEB_HOST}
                      port_value: ${LOCUST_WEB_PORT}
    - name: chatbot
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      dns_failure_refresh_rate: { base_interval: 10s, max_interval: 30s }
      typed_dns_resolver_config: *dns_resolver
      load_assignment:
        cluster_name: chatbot
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ${CHATBOT_HOST}
                      port_value: ${CHATBOT_PORT}
    - name: profiles
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: profiles
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ${FIREPIT_HOST}
                      port_value: ${FIREPIT_PORT}
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: ${ENVOY_ADMIN_PORT}
layered_runtime:
  layers:
    - name: static_layer_0
      static_layer:
        envoy:
          resource_limits:
            listener:
              example_listener_name:
                connection_limit: 10000
